--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Jiangnan University"
+  employer         : "Red Brick University"
   uri              : # URL
   email            : "none@example.org" 
 
